fix(styles): fix styles on small screen

--- a/app/components/contacts/styles.css
+++ b/app/components/contacts/styles.css
@@ -1,5 +1,6 @@
 .contacts {
 	width: 100%;
+	min-width: 600px;
 	height: 100%;
 	padding: 40px 40px 40px 50px;
 	overflow-y: auto;
